# WGP

./: LICENSE  README.md
tool/python/: generate_estimate_univariate_polynomial_interval.py
wcad/core/: CMakeLists.txt
wcad/core/build_tool/: build_windows_solution_x64_dll.sh  build_windows_solution_x64_lib.sh
wcad/core/include/: cad_block.h  cad_common.h  cad_drawing.h  cad_entity.h  cad_layer.h  cad_linetype.h  cad_renderer.h  wcad_base.h
wcad/core/include/cad_entities/: cad_line2d.h  cad_point2d_equal_constraint.h  cad_point2d_point2d_distance_constraint.h
wcad/core/src/: cad_block.cpp  cad_drawing.cpp  cad_entity.cpp  cad_layer.cpp  cad_linetype.cpp  cad_renderer.cpp
wcad/core/src/cad_entities/: cad_line2d.cpp  cad_point2d_equal_constraint.cpp  cad_point2d_point2d_distance_constraint.cpp
wgp/: CMakeLists.txt
wgp/include/: wbase.h
wgp/include/wgeo/: curve2d.h  curve2d_curve2d_int.h  curve3d.h  curve3d_curve3d_int.h  geometry.h  sketch.h  spline.h  surface.h  variable.h
wgp/include/wgeo/curve2d/: arc_curve2d.h  nurbs_curve2d.h
wgp/include/wgeo/curve3d/: nurbs_curve3d.h
wgp/include/wgeo/sketch/: sketch_action.h  sketch_additive.h  sketch_constraint.h  sketch_equation.h  sketch_geometry.h  sketch_helper.h
wgp/include/wgeo/surface/: nurbs_surface.h
wgp/include/wscene/: background.h  camera.h  canvas.h  drawing.h  feature_visitor.h  layout.h  renderer.h  viewport.h
wgp/include/wscene/canvas/: win_opengl_canvas.h
wgp/include/wscene/drawing/: command_log.h  drawing_initializer.h  feature_field_schema.h  field_schema.h  sketch_feature.h
wgp/include/wscene/renderer/: line_material.h  line_stipple.h  opengl_renderer.h  opengl_renderer2d.h  rendering_line.h  rendering_line2d.h  rendering_tag.h
wgp/include/wstd/: array.h  color.h  equations.h  interval.h  interval2d.h  interval3d.h  matrix.h  polynomial.h  prof.h  ptr.h  quaternion.h  rect.h  slice.h  solver.h  string.h  thread.h  type.h  utils.h  vector2d.h  vector3d.h
wgp/src/wgeo/: curve2d.cpp  curve2d_curve2d_int.cpp  curve3d.cpp  curve3d_curve3d_int.cpp  intersect_equations.h  sketch.cpp  spline.cpp  surface.cpp  temp.cpp
wgp/src/wgeo/curve2d/: arc_curve2d.cpp  nurbs_curve2d.cpp
wgp/src/wgeo/curve3d/: nurbs_curve3d.cpp
wgp/src/wgeo/sketch/: sketch_action.cpp  sketch_additive.cpp  sketch_constraint.cpp  sketch_equation.cpp  sketch_geometry.cpp  sketch_helper.cpp
wgp/src/wgeo/surface/: nurbs_surface.cpp
wgp/src/wscene/: background.cpp  camera.cpp  canvas.cpp  drawing.cpp  layout.cpp  renderer.cpp  viewport.cpp
wgp/src/wscene/canvas/: win_opengl_canvas.cpp
wgp/src/wscene/drawing/: command_log.cpp  drawing_initializer.cpp  feature_field_schema.cpp  field_schema.cpp  sketch_feature.cpp
wgp/src/wscene/renderer/: line_material.cpp  line_stipple.cpp  opengl_renderer.cpp  opengl_renderer2d.cpp  rendering_line.cpp  rendering_line2d.cpp  rendering_tag.cpp
wgp/src/wstd/: equations.cpp  polynomial_gen.cpp  prof.cpp  quaternion.cpp  thread.cpp  utils_gen.cpp
